Reposition food container

--- a/style.css
+++ b/style.css
@@ -20,10 +20,13 @@ body {
 }
 
 .food-container {
-    display: block;
-    margin-inline: auto;
-    transform: translateX(-70px) translateY(40vh);
-    height: 20px;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%) translateX(-70px) translateY(20px);
+    display: flex;
+    align-items: center;
+    height: 153px;
     width: 100px;
     overflow: hidden;
 }
